--- a/app/bootstrap/src/main/resources/application.properties
+++ b/app/bootstrap/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ddd-demo
 
-spring.datasource.url=jdbc:mysql://30.183.168.156:3306
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.name=root
 spring.datasource.password=wang123.
